# dioxus

./: .gitattributes  .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE  Makefile.toml  README-FIXED-DX.md  README.md  SOLVEDPROBLEMS.md  TODO.md  WARP.md  _typos.toml  codecov.yml  crash-01064a3e1d8c74f08c77cd0c56eeb6d5c4394308  crash-03889d694510ae3f41d8d8b979405edecef034f7  crash-0482aa8a85671ff0c4cb1b3c098c9b385ec1f8fe  crash-09f803b504df0bb96ee9b389e4e2f806c030d511  crash-0b4c5f5393a50ca5e9ab0060873ae35b31f1c89b  crash-0bc518de1376ee046d8bbb6f002f02b10fa81166  crash-0bd9d8610457fd7d278cde5038c254826eda49ef  crash-0dfc434a5e4028aec6895b992d829da9e6e310cf  crash-100015c8aa8c21a8a55371c1d3ede5636be3dada  crash-1383f3f0d81340d757e1bc7b7fd157bae36b5e73  crash-1533bffb606d91175cda8d3319e6e06de7e530e1  crash-16bc7c858440df4bfe2d2714d969e8ff02905c0d  crash-17b4111399dd5e59be9167907f5f87b3207bf016  crash-1878bf3fe7d0859d7395eec7d752a032ec914d17  crash-18f6ebab49b641b2d29f0c9f05969fe3cf701430  crash-192ba842db062a7340da41af1cd166fd802da2ad  crash-19f525baf79e891a9ba1354ead21be5ae83c364c  crash-1d1770972151d394e6d022b73babf71cac7bcf65  crash-1e0bab01c992e99073c12c07a095795defd0b89d  crash-2026e97fc874a9f9c1c3445fb3e7d0277da71a46  crash-225019f0ab34ab72486552c9d08465ced191314e  crash-253ac4901eebd48a9d45e93f7f73e9208d098c7b  crash-255aee6a132f179678386c01b7e03f2ecda8a253  crash-255b8a1b7d633682d55bd2b2d2e6de53456f9600  (+138 more)
docs/guide/: Cargo.toml  book.toml
docs/router/: Cargo.toml  README.md  book.toml
example-projects/basic-liveview/: Cargo.toml
example-projects/bluetooth-scanner/: Cargo.toml
example-projects/ecommerce-site/: Cargo.toml  README.md  package-lock.json  tailwind.config.js
example-projects/fullstack-hello-world/: Cargo.toml
example-projects/fullstack-mobile/: .gitignore  Cargo.toml  makefile.toml  tailwind.config.js
example-projects/liveview-router/: Cargo.toml
example-projects/wifi-scanner/: Cargo.toml  README.md
examples/: Cargo.toml  README.md  all_css.rs  all_events.rs  antipatterns.rs  app.rs  async.rs  backgrounded_futures.rs  basic.rs  bevy.rs  blah.rs  border.rs  borderless.rs  borrowed.rs  button.rs  calculator.rs  calculator_mutable.rs  callback.rs  clock.rs  common.rs  components.rs  components_and_slots.rs  compose.rs  context_api.rs  control_focus.rs  controll_focus.rs  coordinates.rs  coroutine.rs  counter.rs  counters.rs  crm.rs  custom_assets.rs  custom_attributes.rs  custom_decorations.rs  custom_element.rs  custom_elements.rs  custom_html.rs  custom_menu.rs  disabled.rs  doc_generator.rs  (+144 more)
examples/01-app-demos/: calculator.rs  calculator_mutable.rs  camera.rs  canvas.rs  counters.rs  crm.rs  dog_app.rs  hello_world.rs  image_generator_openai.rs  repo_readme.rs  todomvc.rs  todomvc_store.rs  weather_app.rs  websocket_chat.rs
examples/01-simple-apps/: _README.md
examples/02-building-ui/: checkbox_radio.rs  children.rs  components.rs  conditional_rendering.rs  counter.rs  disabled.rs  dynamic_classes.rs  event_handler_prop.rs  forms.rs  inputs.rs  lists.rs  nested_listeners.rs  svg.rs
examples/03-assets-styling/: css_modules.rs  css_references.rs  custom_assets.rs  document_title.rs  dynamic_asset.rs  dynamic_assets.rs  dynamic_styles.rs  favicon.rs  fonts.rs  inline_styles.rs  meta_elements.rs  script.rs  stylesheet.rs
examples/04-managing-state/: context_api.rs  custom_hook.rs  error_handling.rs  global.rs  lifting_state.rs  memo_chain.rs  read_signal.rs  reducer.rs  signals.rs  struct_signal.rs  use_effect.rs  use_memo.rs  vec_signal.rs
examples/05-using-async/: backgrounded_futures.rs  chaining_resource.rs  clock.rs  streams.rs  suspense.rs
examples/06-routing/: flat_router.rs  hash_fragment_state.rs  link.rs  query_segment_search.rs  router.rs  router_resource.rs  simple_router.rs
examples/07-fullstack/: custom_axum_serve.rs  custom_axum_serve_with_state.rs  custom_client.rs  custom_error_page.rs  dog_app_self_hosted.rs  file_upload.rs  full_request_access.rs  fullstack_hello_world.rs  fullstack_video_stream.rs  handling_errors.rs  header_map.rs  hello_world_test.rs  jwt_client_middleware.rs  login_form.rs  middleware.rs  multipart.rs  multipart_file_upload.rs  multipart_form.rs  namespaced_server_functions.rs  open_api.rs  query_params.rs  redirect.rs  server_errors.rs  server_fn_namespace.rs  server_functions.rs  server_sent_events.rs  server_side_events.rs  server_state.rs  streaming.rs  streaming_file_upload.rs  through_reqwest.rs  websocket.rs
examples/07-routing/: string_router.rs
examples/08-apis/: control_focus.rs  custom_menu.rs  drag_and_drop.rs  errors.rs  eval.rs  file_upload.rs  form.rs  logging.rs  multiwindow.rs  multiwindow_with_tray_icon.rs  on_resize.rs  on_visible.rs  overlay.rs  read_size.rs  run_on_main_thread.rs  scroll_to_top.rs  shortcut.rs  ssr.rs  title.rs  video_stream.rs  wgpu_child_window.rs  window_event.rs  window_focus.rs  window_popup.rs  window_zoom.rs
examples/08-fullstack/: hydration.rs
examples/09-demo-apps/: todomvc.rs  weather_app.rs
examples/09-reference/: all_events.rs  custom_element.rs  datalist_autocomplete.rs  html_builder.rs  rsx_usage.rs  shorthand.rs  simple_list.rs  spread.rs  xss_safety.rs
examples/10-apis/: _README.md  logging.rs  shortcut.rs
examples/PWA-example/: Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html
examples/_assets/: todomvc.css
examples/_examples/: anim.rs  basic.rs  calculator.rs  children.rs  context.rs  deep.rs  demoday.rs  derive.rs  events.rs  fragment.rs  framework_benchmark.rs  hello.rs  helloworld.rs  hifive.rs  infer.rs  input.rs  jackjill.rs  jackjillrsx.rs  landingpage.rs  landingpage2.rs  list.rs  listy.rs  many.rs  model.rs  props.rs  query.rs  rsxt.rs  todomvc-nodeps.rs  todomvc_simple.rs  todomvcsingle.rs  weather.rs
examples/assets/: calculator.css  clock.css  context_api.css  counter.css  crm.css  css_module1.css  css_module2.css  css_references.css  css_references_base.css  custom_assets.css  custom_decorations.css  events.css  example.js  file_upload.css  flat_router.css  overlay.css  (+10 more)
(+1357 files in other folders)
